feat: finish adding all json files